--- a/views/dashboard-admin.html
+++ b/views/dashboard-admin.html
@@ -12,11 +12,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
     <!-- Custom CSS -->
-<<<<<<< Updated upstream
-    <link rel="stylesheet" href="assets/styles/dashboard.css">
-=======
     <link rel="stylesheet" href="../assets/styles/dashboard.css">
->>>>>>> Stashed changes
 </head>
 <body>
     <div class="grid-container">
@@ -41,7 +37,7 @@
             <div class="sidebar-title">
                 <div class="sidebar-brand">
                     <span class="icon">
-                        <img src="assets/images/logo.png" alt="logo">
+                        <img src="../assets/images/logo.png" alt="logo">
                     </span> 
                 </div>
                 <span class="material-icons-outlined" onclick="closeSidebar()">close</span>
@@ -49,7 +45,7 @@
 
             <ul class="sidebar-list">
                 <li class="sidebar-list-item">
-                    <a href="dashboard-admin.html">
+                    <a href="../views/dashboard-admin.html">
                         <span class="material-icons-outlined">dashboard</span> Dashboard
                     </a>
                 </li>
@@ -59,12 +55,12 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="slots.html">
+                    <a href="../views/slots.html">
                         <span class="material-icons-outlined">local_parking</span> Slots
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="user.html">
+                    <a href="../views/user.html">
                         <span class="material-icons-outlined">person</span> Users
                     </a>
                 </li>
@@ -79,7 +75,7 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="login.html">
+                    <a href="../login.php">
                         <span class="material-icons-outlined">logout</span> Logout
                     </a>
                 </li>
