--- a/views/user.html
+++ b/views/user.html
@@ -11,13 +11,9 @@
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
-<<<<<<< Updated upstream
-
-=======
-    
-    <link rel="stylesheet" href="../assets/styles/dashboard.css">
-    <link rel="stylesheet" href="../assets/styles/user.css">
->>>>>>> Stashed changes
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/styles/dashboard.css">
+    <link rel="stylesheet" href="assets/styles/user.css">
     
 </head>
 <body>
@@ -43,11 +39,7 @@
             <div class="sidebar-title">
                 <div class="sidebar-brand">
                     <span class="icon">
-<<<<<<< Updated upstream
-                        <img src="assets/images/logo.png" alt="logo">
-=======
                         <img src="../assets/images/logo.png" alt="logo">
->>>>>>> Stashed changes
                     </span> 
                 </div>
                 <span class="material-icons-outlined" onclick="closeSidebar()">close</span>
@@ -55,11 +47,7 @@
 
             <ul class="sidebar-list">
                 <li class="sidebar-list-item">
-<<<<<<< Updated upstream
-                    <a href="dashboard-admin.html">
-=======
                     <a href="../views/dashboard-admin.html">
->>>>>>> Stashed changes
                         <span class="material-icons-outlined">dashboard</span> Dashboard
                     </a>
                 </li>
@@ -69,16 +57,12 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-<<<<<<< Updated upstream
-                    <a href="slots.html">
-=======
-                    <a href="/slots.html">
->>>>>>> Stashed changes
+                    <a href="../views/slots.html">
                         <span class="material-icons-outlined">local_parking</span> Slots
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="user.html">
+                    <a href="../views/user.html">
                         <span class="material-icons-outlined">person</span> Users
                     </a>
                 </li>
@@ -93,7 +77,7 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="login.html">
+                    <a href="../login.php">
                         <span class="material-icons-outlined">logout</span> Logout
                     </a>
                 </li>
@@ -155,10 +139,6 @@
     </div>
 
     <!-- Custom JS -->
-<<<<<<< Updated upstream
     <script src="assets/scripts/dashboard.js"></script>
-=======
-    <script src="../assets/scripts/dashboard.js"></script>
->>>>>>> Stashed changes
 </body>
 </html>
