--- a/views/dashboard-admin.html
+++ b/views/dashboard-admin.html
@@ -65,7 +65,7 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="SubscriptionPage.html">
                         <span class="material-icons-outlined">subscriptions</span> Subscriptions
                     </a>
                 </li>
