--- a/assets/styles/dashboard.css
+++ b/assets/styles/dashboard.css
@@ -124,11 +124,12 @@ body {
   .main-title {
     display: flex;
     justify-content: space-between;
+    color: #0c0c0c;
   }
   
   .main-cards {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
     margin: 20px 0;
   }
