--- a/views/dashboard-admin.html
+++ b/views/dashboard-admin.html
@@ -16,21 +16,6 @@
 </head>
 <body>
     <div class="grid-container">
-        <!-- Header -->
-        <header class="header">
-            <div class="menu-icon" onclick="openSidebar()">
-                <span class="material-icons-outlined">menu</span>
-            </div>
-            <div class="header-left">
-                <span class="material-icons-outlined">search</span>
-            </div>
-            <div class="header-right">
-                <span class="material-icons-outlined">notifications</span>
-                <span class="material-icons-outlined">email</span>
-                <span class="material-icons-outlined">account_circle</span>
-            </div>
-        </header>
-        <!-- End Header -->
 
         <!-- Sidebar -->
         <aside id="sidebar">
@@ -50,7 +35,7 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="../views/analytics.html">
                         <span class="material-icons-outlined">analytics</span> Analytics
                     </a>
                 </li>
