--- a/views/analytics.html
+++ b/views/analytics.html
@@ -12,34 +12,19 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/styles/dashboard.css">
-    <link rel="stylesheet" href="assets/styles/analytics.css">
+    <link rel="stylesheet" href="../assets/styles/dashboard.css">
+    <link rel="stylesheet" href="../assets/styles/analytics.css">
     
 </head>
 <body>
     <div class="grid-container">
-        <!-- Header -->
-        <header class="header">
-            <div class="menu-icon" onclick="openSidebar()">
-                <span class="material-icons-outlined">menu</span>
-            </div>
-            <div class="header-left">
-                <span class="material-icons-outlined">search</span>
-            </div>
-            <div class="header-right">
-                <span class="material-icons-outlined">notifications</span>
-                <span class="material-icons-outlined">email</span>
-                <span class="material-icons-outlined">account_circle</span>
-            </div>
-        </header>
-        <!-- End Header -->
 
         <!-- Sidebar -->
         <aside id="sidebar">
             <div class="sidebar-title">
                 <div class="sidebar-brand">
                     <span class="icon">
-                        <img src="assets/images/logo.png" alt="logo">
+                        <img src="../assets/images/logo.png" alt="logo">
                     </span> 
                 </div>
                 <span class="material-icons-outlined" onclick="closeSidebar()">close</span>
@@ -67,7 +52,7 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="subcription.html">
                         <span class="material-icons-outlined">subscriptions</span> Subscriptions
                     </a>
                 </li>
@@ -99,11 +84,12 @@
     </div>
 
     <!-- Custom JS -->
-    <script src="assets/scripts/dashboard.js"></script>
+    <script src="../assets/scripts/dashboard.js"></script>
+    <script src="../assets/scripts/analytics.js"></script>
 
     <!-- Chart JS -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
-    <script src="assets/scripts/analytics.js"></script>
+
 </body>
 </html>
