--- a/views/dashboard-admin.html
+++ b/views/dashboard-admin.html
@@ -50,7 +50,7 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="SubscriptionPage.html">
+                    <a href="../views/subcription.html">
                         <span class="material-icons-outlined">subscriptions</span> Subscriptions
                     </a>
                 </li>
