--- a/assets/styles/subscription.css
+++ b/assets/styles/subscription.css
@@ -1,6 +1,30 @@
-/* ---------- SIDEBAR ---------- */
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #fff;
+    color: #0c0c0c;
+    font-family: 'Montserrat', sans-serif;
+  }
   
-#sidebar {
+  .material-icons-outlined {
+    vertical-align: middle;
+    line-height: 1px;
+    font-size: 35px;
+  }
+  
+  .grid-container {
+    display: grid;
+    grid-template-columns: 260px;
+    grid-template-rows: 0.2fr 3fr;
+    grid-template-areas:
+      'sidebar header header header'
+      'sidebar main main main';
+    height: 100vh;
+  }
+
+ /* ---------- SIDEBAR ---------- */
+  
+ #sidebar {
     grid-area: sidebar;
     height: 100%;
     background-color: #800000;
@@ -72,6 +96,13 @@
     */
     z-index: 12 !important;
   }
+  
+  /* ---------- MAIN ---------- */
+  
+  .main-container {
+    grid-area: main;
+    padding: 20px;
+  }
 
 table{border-collapse: collapse;
   width:100%;
@@ -100,3 +131,52 @@ tr:nth-child(even){
     margin-bottom: 1rem;
     text-shadow: 0 0 10px #fff;
 }
+
+ /* ---------- MEDIA QUERIES ---------- */
+  
+  /* Medium <= 992px */
+  
+  @media screen and (max-width: 992px) {
+    .grid-container {
+      grid-template-columns: 1fr;
+      grid-template-rows: 0.2fr 3fr;
+      grid-template-areas:
+        'header'
+        'main';
+    }
+  
+    #sidebar {
+      display: none;
+    }
+  
+    .menu-icon {
+      display: inline;
+    }
+  
+    .sidebar-title > span {
+      display: inline;
+    }
+  }
+  
+  /* Small <= 768px */
+  
+  @media screen and (max-width: 768px) {
+    .main-cards {
+      grid-template-columns: 1fr;
+      gap: 10px;
+      margin-bottom: 0;
+    }
+  
+    .charts {
+      grid-template-columns: 1fr;
+      margin-top: 30px;
+    }
+  }
+  
+  /* Extra Small <= 576px */
+  
+  @media screen and (max-width: 576px) {
+    .hedaer-left {
+      display: none;
+    }
+  }
