--- a/views/subcription.html
+++ b/views/subcription.html
@@ -14,75 +14,80 @@
     <link rel="stylesheet" href="../assets/styles/subscription.css">
 </head>
 <body>
-    <!-- Sidebar -->
-    <aside id="sidebar">
-        <div class="sidebar-title">
-            <div class="sidebar-brand">
-                <span class="icon">
-                    <img src="../assets/images/logo.png" alt="logo">
-                </span> 
+    <div class="grid-container">
+        <!-- Sidebar -->
+        <aside id="sidebar">
+            <div class="sidebar-title">
+                <div class="sidebar-brand">
+                    <span class="icon">
+                        <img src="../assets/images/logo.png" alt="logo">
+                    </span> 
+                </div>
+                <span class="material-icons-outlined" onclick="closeSidebar()">close</span>
             </div>
-            <span class="material-icons-outlined" onclick="closeSidebar()">close</span>
-        </div>
 
-        <ul class="sidebar-list">
-            <li class="sidebar-list-item">
-                <a href="../views/dashboard-admin.html">
-                    <span class="material-icons-outlined">dashboard</span> Dashboard
-                </a>
-            </li>
-            <li class="sidebar-list-item">
-                <a href="../views/analytics.html">
-                    <span class="material-icons-outlined">analytics</span> Analytics
-                </a>
-            </li>
-            <li class="sidebar-list-item">
-                <a href="../views/slots.html">
-                    <span class="material-icons-outlined">local_parking</span> Slots
-                </a>
-            </li>
-            <li class="sidebar-list-item">
-                <a href="../views/user.html">
-                    <span class="material-icons-outlined">person</span> Users
-                </a>
-            </li>
-            <li class="sidebar-list-item">
-                <a href="SubscriptionPage.html">
-                    <span class="material-icons-outlined">subscriptions</span> Subscriptions
-                </a>
-            </li>
-            <li class="sidebar-list-item">
-                <a href="#">
-                    <span class="material-icons-outlined">settings</span> Settings
-                </a>
-            </li>
-            <li class="sidebar-list-item">
-                <a href="../login.php">
-                    <span class="material-icons-outlined">logout</span> Logout
-                </a>
-            </li>
-        </ul>
-    </aside>
-    <!-- End Sidebar -->
-    <div class="container">
-     <div class="header--wrapper">
-        <h1>Subscriptions</h1>
-     </div>
-        <table id="subscriptions-table">
-            <thead>
-                <tr>
-                    <th>Subscription ID</th>
-                    <th>User ID</th>
-                    <th>Plan ID</th>
-                    <th>Day Issued</th>
-                    <th>Day Expiring</th>
-                </tr>
-            </thead>
-            <tbody id="subscriptions-body">
-                
-            </tbody>
-        </table>
+            <ul class="sidebar-list">
+                <li class="sidebar-list-item">
+                    <a href="../views/dashboard-admin.html">
+                        <span class="material-icons-outlined">dashboard</span> Dashboard
+                    </a>
+                </li>
+                <li class="sidebar-list-item">
+                    <a href="../views/analytics.html">
+                        <span class="material-icons-outlined">analytics</span> Analytics
+                    </a>
+                </li>
+                <li class="sidebar-list-item">
+                    <a href="../views/slots.html">
+                        <span class="material-icons-outlined">local_parking</span> Slots
+                    </a>
+                </li>
+                <li class="sidebar-list-item">
+                    <a href="../views/user.html">
+                        <span class="material-icons-outlined">person</span> Users
+                    </a>
+                </li>
+                <li class="sidebar-list-item">
+                    <a href="SubscriptionPage.html">
+                        <span class="material-icons-outlined">subscriptions</span> Subscriptions
+                    </a>
+                </li>
+                <li class="sidebar-list-item">
+                    <a href="#">
+                        <span class="material-icons-outlined">settings</span> Settings
+                    </a>
+                </li>
+                <li class="sidebar-list-item">
+                    <a href="../login/login.php">
+                        <span class="material-icons-outlined">logout</span> Logout
+                    </a>
+                </li>
+            </ul>
+        </aside>
+        <!-- End Sidebar -->
+        <main class="main-container">
+            <div class="container">
+                <div class="header--wrapper">
+                <h1>Subscriptions</h1>
+                </div>
+                <table id="subscriptions-table">
+                    <thead>
+                        <tr>
+                            <th>Subscription ID</th>
+                            <th>User ID</th>
+                            <th>Plan ID</th>
+                            <th>Day Issued</th>
+                            <th>Day Expiring</th>
+                        </tr>
+                    </thead>
+                    <tbody id="subscriptions-body">
+                        
+                    </tbody>
+                </table>
+            </div>
+        </main>
     </div>
+    
     <script src="../assets/scripts/subcription.js"></script>
 </body>
 </html>
