--- a/views/user.html
+++ b/views/user.html
@@ -18,21 +18,6 @@
 </head>
 <body>
     <div class="grid-container">
-        <!-- Header -->
-        <header class="header">
-            <div class="menu-icon" onclick="openSidebar()">
-                <span class="material-icons-outlined">menu</span>
-            </div>
-            <div class="header-left">
-                <span class="material-icons-outlined">search</span>
-            </div>
-            <div class="header-right">
-                <span class="material-icons-outlined">notifications</span>
-                <span class="material-icons-outlined">email</span>
-                <span class="material-icons-outlined">account_circle</span>
-            </div>
-        </header>
-        <!-- End Header -->
 
         <!-- Sidebar -->
         <aside id="sidebar">
@@ -67,7 +52,7 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="#">
+                    <a href="../views/subcription.html">
                         <span class="material-icons-outlined">subscriptions</span> Subscriptions
                     </a>
                 </li>
@@ -77,7 +62,7 @@
                     </a>
                 </li>
                 <li class="sidebar-list-item">
-                    <a href="../login.php">
+                    <a href="../login/login.php">
                         <span class="material-icons-outlined">logout</span> Logout
                     </a>
                 </li>
