--- a/assets/styles/user.css
+++ b/assets/styles/user.css
@@ -1,4 +1,4 @@
-.tabular--wrapper{
+.tabular-wrapper{
     background: #fff;
     margin-top: 1rem;
     border-radius: 10px;
@@ -7,6 +7,7 @@
 .table-container{
     width: 100%;
 }
+
 table{
     width:100%;
     border-collapse: collapse;
@@ -44,7 +45,10 @@ tfoot td{
     padding: 15px;
 }
 .table-container button{
-    color: green;
-    background: none;
+    padding: 10px 20px;
+    background-color: #800000;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
 }
